--- a/style.css
+++ b/style.css
@@ -10,18 +10,19 @@ body{
 	font-family: Hanken Grotesk, san-serif;
 	font-size:18px;
 }
+@media screen and (min-width:768px){
 .container{
-	margin:0 auto;
-	max-width:700px;
-	min-height:90vh;
+	
+	
+	min-height:97vh;
 	display:flex;
 	align-items: center;
 	justify-content: center;
 }
 .wrap{
 	
-	width: 85%;
-	max-width:700px;
+	
+	
 	border-radius:1rem;
 	overflow:hidden;
 	display:grid;
@@ -31,11 +32,11 @@ body{
 .scoresheet{
 	color:hsl(241, 100%, 89%);
 	background-image:linear-gradient(to top,hsla(241, 72%, 50%,1), hsla(256, 72%, 50%, 0.8));
-	max-width:22vw;
+	width:300px;
 	max-height:60vh;
 	text-align:center;
 	border-radius:15px;
-	padding:16px;
+	padding:15px;
 }
 .yr{
 	color: hsl(241, 100%, 89%);
@@ -63,9 +64,6 @@ body{
 .comments{
 	color:	hsl(241, 100%, 89%);
 	line-height:1.5rem;
-	
-	margin-left:5px;
-	margin-right:5px;
 }
 .score{
 	background-color: hsla(256, 72%, 46%, 1);
@@ -84,12 +82,9 @@ body{
 }
 .sum{
 	
-	min-width:20vw;
+	width:300px;
 	max-height:60vh;
-	padding:16px;
-	
-	
-	
+	padding:15px;
 }
 .sum-details{
 	display:flex;
@@ -152,6 +147,8 @@ body{
  .attribution a { 
  color: hsl(228, 45%, 44%);
  }
+ 
+ 
  button{
 	 margin-top: 1.5rem;
 	 width:100%;
@@ -172,3 +169,148 @@ body{
  button:active{
 	 transform: translate(4px, 4px);
  }
+ }
+@media screen and (max-width:767px){
+
+	.container{
+	display:flex;
+	flex-direction:column;
+	align-items: center;
+	justify-content: center;
+	
+}
+.scoresheet{
+	color:hsl(241, 100%, 89%);
+	background-image:linear-gradient(to top,hsla(241, 72%, 50%,1), hsla(256, 72%, 50%, 0.8));
+	text-align:center;
+	border-radius:0 0 15px 15px;
+	padding:15px;
+}
+.yr{
+	color: hsl(241, 100%, 89%);
+	font-size: inherit;
+	margin-bottom:1rem;
+	margin-top:1rem;
+	font-weight:700;
+}
+.score{
+	background-color: hsla(256, 72%, 46%, 1);
+	background-image:linear-gradient(hsla(241, 72%, 50%,1), hsla(256, 72%, 50%, 0.8));
+	border-radius:50%;
+	height:150px;
+	width:150px;
+	display:inline-block;
+	margin-bottom:20px;
+	padding:40px;
+}
+.num{
+	font-weight:800;
+	color:hsl(0, 0%, 100%);
+	font-size:40px;
+	font-family: Hanken Grotesk, san-serif;
+}
+.total-score{
+	color:hsl(241, 100%, 89%);
+	font-size:12px;
+}
+.G{
+	font-weight:700;
+	color: #fff;
+	margin-bottom:1rem;
+	font-size:1.4rem
+}
+.comments{
+	color:	hsl(241, 100%, 89%);
+	line-height:1.5rem;
+}
+.wrap{overflow:hidden;
+	display:grid;
+	
+}
+.sum{
+	
+	padding:15px;
+}
+.sum-details{
+	
+	margin:2rem 0;
+	padding-right:1.4rem;
+}
+.sm{
+	font-size: inherit;
+	margin-top:0.2rem;
+	font-weight:700;
+}
+.detail{
+	
+	width:100%;
+	border-radius:10px;
+	display:flex;
+	justify-content:space-between;
+	padding:1rem;
+	font-weight:700;
+	font-size:14px;
+}
+.t-score{
+	font-weight:700;
+	color:hsl(224, 30%, 27%);
+}
+.total{
+	color:gray;
+	
+}
+.reaction{
+	background-color:hsl(0, 100%, 95%);
+}
+.memory{
+	background-color:hsl(39, 100%, 95%)
+}
+.verbal{
+	background-color: hsl(166, 100%, 95%)
+}
+.visual{
+	background-color: hsl(234, 85%, 95%);
+}
+
+ .detail:nth-child(1){
+	 color:hsl(0, 100%, 67%);
+ }
+ .detail:nth-child(2){
+	 color:hsl(39, 100%, 56%);
+ }
+ 
+ .detail:nth-child(3){
+	color: hsl(166, 100%, 37%);
+ }
+.detail:nth-child(4){
+	color:hsl(234, 85%, 45%); 
+ }
+  button{
+	 margin-top: 1.5rem;
+	 width:100%;
+	 color:  hsl(221, 100%, 96%);
+	 background-color:hsl(224, 30%, 27%);
+	 border-radius:30px;
+	 padding:0.8rem 3rem;
+	 font-weight: 700;
+	 font-size:15px;
+	 cursor:pointer;
+	 border:none;
+	 box-shadow:0px 4px 4px;
+ }
+ button:hover{
+	 background-image:linear-gradient(
+	 hsl(252, 100%, 67%), hsl(241,81%,54%));
+ }
+ button:active{
+	 transform: translate(4px, 4px);
+ }
+  }
+ .attribution { 
+	font-size: 11px; text-align: center;
+ }
+ .attribution a { 
+ color: hsl(228, 45%, 44%);
+ }
+}
+
